Add a role to set the cluster call url in the nd table (v6 only)

--- a/stroom/install_mixed_cluster.yml
+++ b/stroom/install_mixed_cluster.yml
@@ -38,3 +38,18 @@
 
     - import_role:
         name: non_docker_proxy/deploy
+
+########### stroom_database HOSTS  ###########
+
+- name: "Initialise database"
+  hosts:
+    - stroom_database
+  gather_facts: true
+  tasks:
+
+    - import_role:
+        name: db_init/nodes
+      tags:
+        - deploy
+        - configure
+        - db_init
