--- a/stroom/install_stack_cluster.yml
+++ b/stroom/install_stack_cluster.yml
@@ -53,3 +53,18 @@
         name: stack/deploy
       tags:
         - deploy
+
+########### stroom_database HOSTS  ###########
+
+- name: "Initialise database"
+  hosts:
+    - stroom_database
+  gather_facts: true
+  tasks:
+
+    - import_role:
+        name: db_init/nodes
+      tags:
+        - deploy
+        - configure
+        - db_init
