--- a/stroom/install_mixed_cluster.yml
+++ b/stroom/install_mixed_cluster.yml
@@ -39,6 +39,20 @@
     - import_role:
         name: non_docker_proxy/deploy
 
+########### One of stroom_and_proxy HOSTS  ###########
+
+  # TODO start up services stack then start up one stroom node to build the DB
+  # In v7 we could just run the migrate.sh script.
+
+#- hosts:
+    #- stroom_and_proxy[0]
+  #become: true
+  #become_user: "{{ stroom_user }}"
+  #tasks:
+
+    #- import_role:
+        #name: 
+
 ########### stroom_database HOSTS  ###########
 
 - name: "Initialise database"
