--- a/stroom/roles/stack/import_dump/defaults/main.yml
+++ b/stroom/roles/stack/import_dump/defaults/main.yml
@@ -4,15 +4,15 @@ db_dumps:
   - filename:
     db_name: stroom
     username: stroomuser
-    password: password1
+    password: "{{ mysql_stroomuser_pw }}"
   - filename:
     db_name: stats
     username: statsuser
-    password: password1
+    password: "{{ mysql_statsuser_pw }}"
   - filename:
     db_name: auth
     username: authuser
-    password: password1
+    password: "{{ mysql_authuser_pw }}"
 
 stack_dir: "{{ stack_install_root_dir }}/{{ stack_name }}/{{ stack_name }}-{{stack_version }}"
 
