--- a/stroom/roles/setup/common/tasks/main.yml
+++ b/stroom/roles/setup/common/tasks/main.yml
@@ -60,7 +60,7 @@
       - httpie  # Used by some stroom scripts
       - python  # Not sure we need it but just in case
       - python3  # Not sure we need it but just in case
-  when: ansible_distribution == "CentOS" and ansible_distribution_major_version == '7'
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == '7'
 
 # Install common command line tools
 - name: YUM install various command line tools (specific to distro versions)
@@ -74,7 +74,7 @@
       #- httpie  # Used by some stroom scripts
       - python2  # Not sure we need it but just in case
       - python36  # Not sure we need it but just in case
-  when: ansible_distribution == "CentOS" and ansible_distribution_major_version == '8'
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version == '8'
 
 - name: Ensure firewalld is running
   become: true
