--- a/stroom/test_dump_2_source_db_migration.yml
+++ b/stroom/test_dump_2_source_db_migration.yml
@@ -109,7 +109,8 @@
       vars:
         stack_install_root_dir: "{{ stack_dir_from }}"
         stack_version: "{{ stroom_version_from }}"
-        services_to_run: "stroom-all-dbs"
+        services_to_run: 
+          - stroom-all-dbs
 
       # Start up the DB
     - import_role:
@@ -147,7 +148,11 @@
     - import_role:
         name: stack/set_active_services
       vars:
-        services_to_run: "nginx stroom-all-dbs stroom-auth-service stroom-ui"
+        services_to_run: 
+          - nginx 
+          - stroom-all-dbs 
+          - stroom-auth-service 
+          - stroom-ui
         stack_install_root_dir: "{{ stack_dir_to }}"
         stack_version: "{{ stroom_version_to }}"
 
