--- a/stroom/roles/setup/common/tasks/main.yml
+++ b/stroom/roles/setup/common/tasks/main.yml
@@ -41,6 +41,7 @@
       - bind-utils # for nslookup
       - coreutils  # realpath is used by some stroom scripts
       - curl
+      - firewalld.noarch # Needed as CentOS on AWS does not include firewall
       - git # Needed for migration testing, but useful to have
       - htop # Useful process monitoring
       - httpie  # Used by some stroom scripts
