--- a/stroom/roles/setup/java/vars/main.yml
+++ b/stroom/roles/setup/java/vars/main.yml
@@ -27,6 +27,11 @@ _java:
     url: "https://download.java.net/java/GA/jdk14.0.2/205943a0976c4ed48cb16f1043c5c647/12/GPL/openjdk-14.0.2_linux-x64_bin.tar.gz"
     directory: "jdk-14.0.2"
     home_dir: "{{ java_unarchive_dest }}/jdk-14.0.2"
+  15:
+    targz: "openjdk-15.0.2_linux-x64_bin.tar.gz"
+    url: "https://download.java.net/java/GA/jdk15.0.2/0d1cfde4252546c6931946de8db48ee2/7/GPL/openjdk-15.0.2_linux-x64_bin.tar.gz"
+    directory: "jdk-15.0.2"
+    home_dir: "{{ java_unarchive_dest }}/jdk-15.0.2"
   16:
     targz: "openjdk-16.0.1_linux-x64_bin.tar.gz"
     url: "https://download.java.net/java/GA/jdk16.0.1/7147401fd7354114ac51ef3e1328291f/9/GPL/openjdk-16.0.1_linux-x64_bin.tar.gz"
