--- a/stroom/roles/setup/java/tasks/main.yml
+++ b/stroom/roles/setup/java/tasks/main.yml
@@ -70,6 +70,14 @@
         dest:  "{{ java_unarchive_dest }}"
         remote_src: true
 
+    - name: Copy jdk_home.sh to /etc/profile.d so all users have JAVA_HOME and path set
+      become: true
+      template: 
+        src: templates/jdk_home.sh.j2
+        dest: /etc/profile.d/jdk_home.sh
+        owner: root 
+        mode: 0644
+
   vars:
     #sha256_url: "{{ java_archive[java_version].url }}.sha256"
     # Need to do a lookup as the sha256 url just contains the hash, not hash + filename
