--- a/stroom/setup_stroom_hosts.yml
+++ b/stroom/setup_stroom_hosts.yml
@@ -72,7 +72,8 @@
     - stroom_and_proxy
   vars:
     # Set java_version based on the stroom version
-    java_version: '{{ 8 if stroom_version is search("^v6\.") else 16 }}'
+    # TODO Seeing InaccessibleObjectException when running j16 unless jvm arg --illegal-access=permit is used, so setting at j15 for now.
+    java_version: '{{ 8 if stroom_version is search("^v6\.") else 15 }}'
   tags:
     - install_java
   tasks:
