--- a/stroom/roles/setup/mysql/tasks/main.yml
+++ b/stroom/roles/setup/mysql/tasks/main.yml
@@ -125,7 +125,7 @@
 - name: Setup MySQL users
   mysql_user:
     name: "{{ item.user }}"
-    password: "{{ item.password | default('stroompassword1') }}"
+    password: "{{ item.password | default('StroomPassword1?') }}"
     host: "{{ item.host | default('%') }}"
     priv: "{{ item.privs | default(item.name + '.*:ALL') }}"
   loop: "{{ stroom_databases | flatten(levels=1) }}"
