Better example_inventory.yml for single_node_stroom_core_stack

--- a/config/single_node_stroom_core_stack/example_inventory/example_inventory.yml
+++ b/config/single_node_stroom_core_stack/example_inventory/example_inventory.yml
@@ -3,4 +3,5 @@ all:
   children:
     stroom_core_stack:
       hosts:
-        stroom-core-stack-host
+        stroom-core-stack-host:
+          public_ip_address: 192.168.100.20 
