Added test_inventory.yml to .gitignore for single_node_stroom_core_stack

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ venv/
 .vagrant
 
 /config/multi_node_mixed_cluster/example_inventory/test_inventory.yml
+
+/config/single_node_stroom_core_stack/example_inventory/test_inventory.yml
