Renames 'localhost' role to 'mysql_controller_deps'

--- a/stroom/verify_local_config_dir_exists.yml
+++ b/stroom/verify_local_config_dir_exists.yml
@@ -26,5 +26,5 @@
           - _local_config_dir_info.stat.exists == true
 
     - import_role:
-        name: roles/setup/localhost 
+        name: roles/setup/mysql_controller_deps
 
