--- a/config/multi_node_mixed_cluster/example_inventory/example_inventory.yml
+++ b/config/multi_node_mixed_cluster/example_inventory/example_inventory.yml
@@ -10,6 +10,7 @@ all:
           #java_opts: "-Xms512m -Xmx2048m"
         stroom-and-proxy-host-2:
           #public_ip_address: 192.168.100.12
+          #java_opts: "-Xms512m -Xmx2048m"
     stroom_services_stack:
       hosts:
         stroom-services-stack-host:
@@ -18,4 +19,18 @@ all:
     stroom_database:
       hosts:
         stroom-database-host:
+          #ansible_host: 192.168.100.14        # Need to specify FQDN as ansible host else Ansible will not pick up the separate DB instances on the same host 
           #public_ip_address: 192.168.100.14
+          #mysql_port:3306
+          #db_instance_name: "stroom"
+          #db_root_password:"StroomPassword1?_root"
+          #db_local_socket: "/var/run/mysqld/mysqld.sock"
+    stroom_stats_database:
+      hosts:
+        stroom-stats_database-host:
+          #ansible_host: 192.168.100.15        # Need to specify FQDN as ansible host else Ansible will not pick up the separate DB instances on the same host 
+          #public_ip_address: 192.168.100.15
+          #mysql_port:3307
+          #db_instance_name: "stats"
+          #db_root_password:"StroomPassword1?_root"
+          #db_local_socket: "/var/run/mysqld/mysqld.sock"
