--- a/stroom/install_mixed_cluster.yml
+++ b/stroom/install_mixed_cluster.yml
@@ -7,7 +7,9 @@
 ################### SETUP HOST(S) ###################
 
 - name: Setup stroom hosts
-  import_playbook: ./setup_stroom_hosts.yml
+  import_playbook: ./setup_stroom_hosts.yml  
+  vars: 
+    mixed_cluster: 'true' 
   tags:
     - setup
 
