--- a/stroom/roles/setup/mysql/defaults/main.yml
+++ b/stroom/roles/setup/mysql/defaults/main.yml
@@ -1,10 +1,10 @@
 mysql_repo_version: "80"
-mysql_repo_target_version: "56"
+mysql_repo_target_version: "80"
 mysql_repo_rpm_file: "mysql{{ mysql_repo_version }}-community-release-el7-3.noarch.rpm"
 mysql_repo_local_install: "/etc/yum.repos.d/mysql-community.repo"
-mysql_port: "3306"
+# mysql_port: "3306" # Replaced by variable listed in config/multi_node_mixed_cluster/example_inventory/example_inventory.yml
 
-stroom_db_root_password: "StroomPassword1?_root"
+stroom_db_root_password: "Str00m-DB" # Replaced by variable listed in config/multi_node_mixed_cluster/example_inventory/example_inventory.yml
 
 stroom_databases:
 
