--- a/stroom/roles/setup/mysql/files/my.cnf
+++ b/stroom/roles/setup/mysql/files/my.cnf
@@ -1,8 +1,5 @@
 # For advice on how to change settings please see
-# http://dev.mysql.com/doc/refman/5.6/en/server-configuration-defaults.html
-
-[client]
-port   = 3306
+# http://dev.mysql.com/doc/refman/8.0/en/server-configuration-defaults.html
 
 [mysqld]
 #
@@ -10,9 +7,11 @@ port   = 3306
 # cache in MySQL. Start at 70% of total RAM for dedicated server, else 10%.
 # innodb_buffer_pool_size = 128M
 #
-# Remove leading # to turn on a very important data integrity option: logging
-# changes to the binary log between backups.
-# log_bin
+# Remove the leading "# " to disable binary logging
+# Binary logging captures changes between backups and is enabled by
+# default. It's default setting is log_bin=binlog
+# disable_log_bin
+# log_bin=/var/lib/mysql/mysql-bin
 #
 # Remove leading # to set options mainly useful for reporting servers.
 # The server defaults are faster for transactions and fast SELECTs.
@@ -20,19 +19,44 @@ port   = 3306
 # join_buffer_size = 128M
 # sort_buffer_size = 2M
 # read_rnd_buffer_size = 2M
-port   = 3306
-datadir=/var/lib/mysql
-socket=/var/lib/mysql/mysql.sock
+#
+# Remove leading # to revert to previous value for default_authentication_plugin,
+# this will increase compatibility with older clients. For background, see:
+# https://dev.mysql.com/doc/refman/8.0/en/server-system-variables.html#sysvar_default_authentication_plugin
+# default-authentication-plugin=mysql_native_password
 
-# Set the database to UTC in case the server is not running on UTC
-default_time_zone='+00:00'
+# Enabling server_id. Set to 1 for Master.
+#
+# server-id=1
 
-# Disabling symbolic-links is recommended to prevent assorted security risks
-symbolic-links=0
+# Enabling correct binlog format for Stroom 6/7
+#
+# binlog_format=MIXED
 
-# Recommended in standard MySQL setup
-sql_mode=NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES
+# datadir=/var/lib/mysql
+# socket=/var/lib/mysql/mysql.sock
+# log-error=/var/log/mysqld.log
+# pid-file=/var/run/mysqld/mysqld.pid
 
-[mysqld_safe]
-log-error=/var/log/mysqld.log
-pid-file=/var/run/mysqld/mysqld.pid
+[mysqld@stroom]
+port=3306
+server-id=1
+log_bin=/var/lib/mysql-stroom/mysql.stroom-bin
+binlog_format=MIXED
+datadir=/var/lib/mysql-stroom/
+socket=/var/run/mysqld/mysql-stroom.sock
+log-error=/var/log/mysqld-stroom.log
+pid-file=/var/run/mysqld/mysqld-stroom.pid
+mysqlx=0
+
+[mysqld@stats]
+port=3307
+server-id=100
+log_bin=/var/lib/mysql-stats/mysql.stats-bin
+binlog_format=MIXED
+datadir=/var/lib/mysql-stats
+socket=/var/run/mysqld/mysql-stats.sock
+log-error=/var/log/mysqld-stats.log
+pid-file=/var/run/mysqld/mysqld-stats.pid
+mysqlx=0
+
