--- a/stroom/ansible.cfg
+++ b/stroom/ansible.cfg
@@ -8,7 +8,7 @@ retry_files_enabled = False
 
 # This key will have been generated if you have the aws setup playbooks.
 # If you're not using aws then you'll need the key you use to access your hosts.
-private_key_file = ~/.ssh/burn_test_1_key_pair.pem
+private_key_file = ~/.ssh/private_key.pem
 
 # We don't want SSH asking if we accept the hosts' certificates.
 # I.e. plays must be non-interactive (unless it's an ansible var_prompt).
