--- a/stroom/roles/setup/systemd/tasks/main.yml
+++ b/stroom/roles/setup/systemd/tasks/main.yml
@@ -7,7 +7,8 @@
       - stack_name is defined
       - stack_version is defined
       - stack_install_root_dir is defined
-
+#      - stroom_service_state is defined
+      - stroom_service_on_boot
 
 - name: SystemD Service File
   become: true
@@ -17,3 +18,20 @@
   template:
     src: "templates/etc/systemd/system/stroom.service.j2"
     dest: "/etc/systemd/system/stroom.service"
+
+- name: some debug
+  debug:
+    msg: "{{ stroom_service_on_boot }}" 
+
+- name: SystemD Service enable:
+  when: stroom_service_on_boot is defined
+  become: true
+  systemd:
+    enabled: "{{ stroom_service_on_boot }}"
+
+- name: SystemD Service start:
+  when: stroom_service_state is defined
+  become: true
+  systemd:
+    state: "{{ stroom_service_state }}"
+
