added missing service name

--- a/stroom/roles/setup/systemd/tasks/main.yml
+++ b/stroom/roles/setup/systemd/tasks/main.yml
@@ -21,17 +21,18 @@
 
 - name: some debug
   debug:
-    msg: "{{ stroom_service_on_boot }}" 
+    msg: "{{ stroom_service_on_boot }}"
 
 - name: SystemD Service enable
   when: stroom_service_on_boot is defined
   become: true
   systemd:
+    name: stroom
     enabled: "{{ stroom_service_on_boot }}"
 
 - name: SystemD Service start
   when: stroom_service_state is defined
   become: true
   systemd:
+    name: stroom
     state: "{{ stroom_service_state }}"
-
