Added missing "is defined" on variable check.

--- a/stroom/roles/setup/systemd/tasks/main.yml
+++ b/stroom/roles/setup/systemd/tasks/main.yml
@@ -7,7 +7,7 @@
       - stack_name is defined
       - stack_version is defined
       - stack_install_root_dir is defined
-      - stroom_service_on_boot
+      - stroom_service_on_boot is defined
 
 - name: SystemD Service File
   become: true
