--- a/stroom/install_mixed_cluster.yml
+++ b/stroom/install_mixed_cluster.yml
@@ -26,6 +26,20 @@
       tags:
         - deploy
 
+########### stroom HOSTS  ###########
+
+- hosts:
+    - stroom
+    - stroom_ui
+    - stroom_with_proxy
+  gather_facts: true # Needed for yum stuff
+  become: true
+  become_user: "{{ stroom_user }}"
+  tasks:
+
+    - import_role:
+        name: non_docker_stroom/deploy
+
 ########### stroom and proxy HOSTS  ###########
 
 - hosts:
@@ -40,3 +54,4 @@
 
     - import_role:
         name: non_docker_proxy/deploy
+
